[package]
name = "collect-me"
version = "0.1.0"
edition = "2021"
authors = ["Jaco Malan <jacom@codelog.co.za>"]
repository = "https://github.com/JacoMalan1/collect-me"
description = "Additional collections not included in the Rust standard library."
license = "MIT"

[dependencies]
rand = { version = "0.8", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["rand/std", "rand/std_rng", "alloc"]
alloc = []
